<resources>
    <string name="app_name">AppCRUD</string>
    <string name="hint_name">Nombre</string>
    <string name="title_name">CRUD</string>
    <string name="hint_pass">Password</string>
    <string name="button_next">Ingresar</string>
    <string name="hint_obligatorio">Obligatorio</string>
    <string name="hint_description">Añade un Producto</string>
    <string name="test_button">Funciona</string>
    <string name="msg_operation_sucess">Operacion exitosa.</string>
    <string name="msg_operation_error">Error al modificar la DB</string>
    <string name="validation_field_require">Campo requerido</string>
    <string name="message_db_error">¿Desa eliminar la nota?</string>
    <string name="dialog_title">¿Desa eliminar la nota?</string>
    <string name="dialog_ok">Eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="notes_pending">Pendientes</string>
    <string name="notes_finished">Finalizadas</string>

    <string name="key_cam">k_cam</string>
    <string name="key_img">k_img</string>

    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="profile_erro_no_resolve">No se encontro app compatible</string>
    <string name="save_in_db">Guardar img en DB</string>
    <string name="show_pics">Ver Foto</string>
    <string name="create_pdf">Crear PDF</string>
    <string name="permissions_acepted">Permisos Aceptados</string>
    <string name="permission_succes">Permiso concedido</string>
    <string name="permission_deneid">Permiso denegado</string>
    <string name="title_prod">Productos</string>
    <string name="name_file_pdf">ArchivoPdfCRUD</string>
    <string name="pdf_created">PDF creado correctamente</string>

</resources>